gitops-apps/playbox/core/apps/cilium-resources/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-service-route
  namespace: playbox-service
spec:
  parentRefs:
    - name: playbox-external-gateway
      namespace: playbox-service
  hostnames:
    - "cd.datax.dreamai.kr"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
  - name: playbox-external-gateway
    namespace: playbox-service
  hostnames:
  - "auth.jinwang.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak-service
      port: 8080
---
